# dc_eda

./: README.md  pyproject.toml
src/: experiments.ipynb  hypothesis01.ipynb  hypothesis02.ipynb  scores.ipynb
