[project]
name = "dc-eda"
version = "0.1.0"
description = "Exploratory Data Analysis for drug combinations in DISNET"
authors = [
    { name = "Joaquin Negrete", email = "joaquin.negrete03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbdime>=4.0.4",
    "pandas>=3.0.1",
    "pymysql>=1.1.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
]
